--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&family=Ubuntu:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
